# sweep

./: .gitignore  AUTHORS  CREDITS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.ALSA  README.OSS  README.Solaris  README.i18n  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  sweep-schemes.ini  sweep.desktop  sweep.spec  sweep.spec.in  sweep_logo.ppm  testcommit
doc/: Makefile.am  Makefile.in  plugin_writers_guide.txt  sweep.1  sweep.1.in
include/: Makefile.am
include/sweep/: Makefile.am  config.h.in  sweep.h  sweep_filter.h  sweep_i18n.h  sweep_sample.h  sweep_selection.h  sweep_sounddata.h  sweep_typeconvert.h  sweep_types.h  sweep_undo.h  sweep_version.h
intl/: Makefile.in  dcigettext.c  l10nflist.c  localcharset.c  localename.c  printf.c  vasnprintf.c
m4/: Makefile.am  po.m4  speex.m4  vorbis.m4
pixmaps/: Makefile.am  SRC.xpm  copy.xpm  crop.xpm  cursor-closedhand.xbm  cursor-closedhand_mask.xbm  cursor-openhand.xbm  cursor-openhand_mask.xbm  cut.xpm  done.xpm  eye.xpm  ff.xpm  hand.xbm  hand.xpm  hand_mask.xbm  headphones.xpm  headphones2.xpm  horiz.xpm  horiz_minus.xpm  info.xpm  ladlogo.xpm  libsndfile.xpm  loop.xpm  lowleft.xpm  lowright.xpm  mic.xpm  mouse.xpm  mute.xpm  needle.xbm  needle_mask.xbm  new.xpm  nexttrk.xpm  noloop.xpm  open.xpm  paste.xpm  pastemix.xpm  pastexfade.xpm  pencil.xpm  ping_kanji.xpm  playpaus.xpm  (+32 more)
plugins/: Makefile.am  Makefile.in
plugins/byenergy/: Makefile.am  Makefile.in  byenergy.c
plugins/echo/: Makefile.am  Makefile.in  echo.c  example.c
plugins/example/: Makefile.am  example.c
plugins/fade/: Makefile.am  fade.c
plugins/ladspa/: Makefile.am  Makefile.in  ladspameta.c
plugins/normalise/: Makefile.am  Makefile.in  normalise.c
plugins/reverse/: Makefile.am  Makefile.in  reverse.c
po/: ChangeLog  Makefile.in.in  Makevars  POTFILES.in  cat-id-tbl.c  cs.po  de.po  el.po  en_AU.po  es_ES.po  fr.gmo  fr.po  hu.po  it.po  ja.po  pl.po  ru.po  sweep.pot
release_notes/: sweep-0.8.3.txt  sweep-0.8.4.txt  sweep-0.9.0.txt  sweep-0.9.1.txt  sweep-0.9.2.txt  sweep-0.9.3.txt
src/: Makefile.am  Makefile.in  about_dialog.c  about_dialog.h  callbacks.c  callbacks.h  channelops.c  channelops.h  cursors.c  cursors.h  db_ruler.c  db_ruler.h  db_slider.c  db_slider.h  driver.c  driver.h  driver_alsa.c  driver_oss.c  driver_pulseaudio.c  driver_solaris.c  echo.c  echo.h  edit.c  edit.h  file_dialogs.c  file_dialogs.h  file_mad.c  file_ops.c  file_ops.h  file_sndfile.c  file_sndfile.h  file_sndfile0.c  file_sndfile1.c  file_speex.c  file_vorbis.c  filter_ops.c  filter_ops.h  format.c  format.h  head.c  (+70 more)
src/tdb/: Makefile.am  svn-update.sh  tdb.c  tdb.h
