#EXTRA_DIST = edit.xpm ff.xpm horiz.xpm horiz_plus.xpm loop.xpm lowleft.xpm \
#	     lowright.xpm nexttrk.xpm noloop.xpm playpaus.xpm playpsel.xpm \
#	     prevtrk.xpm rew.xpm save.xpm stop.xpm sweep.png upleft.xpm \
#	     upright.xpm vol.xpm zoom_in.xbm zoom_in.xpm zoom_in_mask.xbm \
#	     zoom_out.xbm zoom_out.xpm zoom_out_mask.xbm

#pixmapdir = $(datadir)/pixmaps

#pixmap_DATA = sweep.png
